RESOLVED FIXED146188
AX: iOS: VoiceOver and ARIA: haspopup property not announced
https://bugs.webkit.org/show_bug.cgi?id=146188
Summary AX: iOS: VoiceOver and ARIA: haspopup property not announced
chris fleizach
Reported 2015-06-20 19:43:48 PDT
The aria-haspopup property is not announced on ARIA menus and other controls like links, it is only indicated on buttons <rdar://problem/20013586>
Attachments
patch (1.37 KB, patch)
2015-06-20 19:45 PDT, chris fleizach
darin: review+
chris fleizach
Comment 1 2015-06-20 19:45:16 PDT
Darin Adler
Comment 2 2015-06-23 12:07:26 PDT
Comment on attachment 255308 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=255308&action=review > Source/WebCore/ChangeLog:3 > + AX: iOS: VoiceOver and ARIA: hashpopup property not announced hashpopup
chris fleizach
Comment 3 2015-06-23 14:42:35 PDT
Note You need to log in before you can comment on or make changes to this bug.