AX: iOS: VoiceOver and ARIA: has popup property not announced https://bugs.webkit.org/show_bug.cgi?id=146188

Reviewed by Darin Adler.

Expose the existing "has popup" property to the iOS Accessibility API.

* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper accessibilityHasPopup]):



Canonical link: https://commits.webkit.org/164323@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185884 268f45cc-cd09-0410-ab3c-d52691b4dbfc